--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.steve.retrofit1"
+        applicationId "com.steve.retrofitRxKotlin"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
@@ -36,5 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    mavenCentral()
 }
